# boop-client

./: .gitignore  README.md
boop-client-core/: Cargo.toml
boop-client-core/src/: api.rs  main.rs  models.rs  state.rs  store.rs
boop-windows/: README.md
boop-windows/src/Boop.Windows/: App.xaml  App.xaml.cs  Boop.Windows.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
boop-windows/src/Boop.Windows/Controls/: EventDetailView.cs  MarkdownBlock.cs
boop-windows/src/Boop.Windows/Models/: BoopModels.cs
boop-windows/src/Boop.Windows/Services/: BoopCoreClient.cs  NotificationService.cs  ToastActivation.cs  TrayIconService.cs
boop-windows/src/Boop.Windows/ViewModels/: MainViewModel.cs
